--- a/index.html.html
+++ b/index.html.html
@@ -130,8 +130,8 @@
                                     </div>
                                     <div class="mx-2">
                                         <p class="text-white fs-5 m-0">Bulb ON/OFF effect || HTML CSS Javascript</p>
-                                        <p class="text-white-50 m-0">Syntax</p>
-                                        <p class="text-white-50" style="display: inline-block ;"> 104K subscribers . 1.4M views . 1 day ago </p>
+                                        <p class="text-white-50 m-0" style="color: white;">Syntax</p>
+                                        <p class="text-white-50" style="display: inline-block ; color: white;"> 104K subscribers . 1.4M views . 1 day ago </p>
                                         <button type="button" class="btn btn-gray" style="border-radius:33px;  display: inline-block;">Join</button>
                                         <button type="button" style="border-radius:90px; background-color: black;"   class="btn btn-dark">Subscribe</button>
 
